Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Package implementing cacert scripts from Linux From Scratch http://www.linuxfromscratch.org/blfs/view/svn/postlfs/cacerts.html
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
